Changelog:

Key:
  + Addition
  = Fix
  ! Change
  - Removal

Version 1.1.0 | Tested on CB 1.4.7-R1.0
 + Added support for DiabloDrops! Make Legendary items Soulbound on pickup, or make armor Sets Soulbound on Equip
 + Added new item type "Bind on Equip", when a player equips this item it will get Soulbound to that player.
 + Added new item type "Bind on Use", when a player uses this item it will get Soulbound to that player.

Version 1.0.1 | Tested on CB 1.4.7-R1.0
 = Fixed bug with the Update Checker

Version 1.0.0 | Tested on CB 1.4.7-R1.0
 + First release
 + Added Soulbound items
 + Added Bind on Pickup items
 + Added prevent storing Soulbound in containers
 + Added prevent dropping Soulbound items
 + Added prevent dropping Soulbound items on death
 + Added keep Soulbound items after death
 + Added Metrics for stats
 + Added an update check