@@ -2,8 +2,8 @@ name: Soulbound
 author: TfT_02
 main: com.me.tft_02.soulbound.Soulbound
 description: Soulbound items for your RPG servers!
-version: 1.0.1
-softdepend: [DiabloDrops]
+version: 1.1.0
+softdepend: [DiabloDrops, EpicBossRecoded]
 commands:
    soulbound:
       description: Usage /soulbound
